--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>lab1</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <dependency>
-        <groupId>info.picocli</groupId>
-        <artifactId>picocli</artifactId>
-        <version>4.6.1</version>
-    </dependency>
+    
+    <dependencies>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
