--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <version>5.7.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
   </dependencies>
 
 </project>
