--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,16 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-core</artifactId>
+      <version>1.30</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>1.30</version>
+    </dependency>
   </dependencies>
 
 </project>
