--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
