--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
     - name: Test with Maven
-      run: |
-            mvn clean test
+      run: Continuous delivery
+           mvn deploy
         
