--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,6 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Test with Maven
-      run: Continuous delivery
-           mvn deploy
+    - name: Continuous delivery
+      run: mvn deploy
         
