revert to origin

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Continuous delivery
-      run: mvn deploy
+    - name: Continuous Integration test
+      run: mvn clean test
         
