small error in pom.xml corrected

--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-generator-annprocess</artifactId>
       <version>1.30</version>
-	</dependecy>
+	</dependency>
 	<dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
