--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 11
       - name: "Build & test"
         run: |
-          mvn -B clean install --file pom.xml
+          mvn -B clean install 
           echo "done!"
       - name: Create Release
         id: create_release
